# JRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh
Engine/: AppContext.hpp  JRenderApp.cpp  JRenderApp.hpp  JRenderer.cpp  JRenderer.hpp  global.hpp  main.cpp
Engine/Interface/: JImGui.cpp  JImGui.hpp  UIOverlay.hpp  gui.cpp  gui.hpp  keyboardController.cpp  keyboardController.hpp  uiSettings.hpp
Engine/Renderer/: RenderTarget.cpp  RenderTarget.hpp  RenderingSystem.cpp  RenderingSystem.hpp
Engine/Renderers/: Renderer.cpp  Renderer.hpp  RenderingSystem.cpp  RenderingSystem.hpp  Rendering_system.cpp  Rendering_system.hpp  interactiveSystem.cpp  interactiveSystem.hpp  precomputeSystem.cpp  precomputeSystem.hpp
Engine/Scene/: asset.cpp  asset.hpp  camera.cpp  camera.hpp  info.hpp  textureManager.hpp
Engine/VulkanCore/: buffer.cpp  buffer.hpp  commandBuffer.cpp  commandBuffer.hpp  descriptor.cpp  descriptor.hpp  device.cpp  device.hpp  global.cpp  global.hpp  gui.cpp  load_model.cpp  load_model.hpp  load_texture.cpp  load_texture.hpp  pipeline.cpp  pipeline.hpp  shaderModule.cpp  shaderModule.hpp  swapchain.cpp  swapchain.hpp  sync.cpp  sync.hpp  utility.cpp  utility.hpp  window.cpp  window.hpp
Engine/VulkanCore/descriptor/: descriptor.cpp  descriptor.hpp  descriptorAllocator.cpp  descriptorAllocator.hpp
Engine/VulkanCore/material/: PBRmaterial.cpp  PBRmaterial.hpp  bitmap.cpp  bitmap.hpp  cubemapUtils.cpp  cubemapUtils.hpp  load_texture.cpp  load_texture.hpp
Engine/VulkanCore/structs/: pushConstants.hpp  uniforms.hpp
Engine/utils/: global.cpp  utility.cpp  utility.hpp
assets/: README.md
data/: BRDF_LUT.ktx
shaders/: BRDF_LUT.comp  BRDF_LUT.comp.spv  common.sp  computePrefilIrrad.comp  computePrefilIrrad.comp.spv  computeShader.comp  descriptor.cpp  descriptor.hpp  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv
src/: JRenderer.cpp  buffer.cpp  buffer.hpp  commandBuffer.cpp  commandBuffer.hpp  commandBuffers.cpp  commandBuffers.hpp  descriptor.cpp  descriptor.hpp  device.cpp  device.hpp  global.hpp  gui.cpp  gui.hpp  load_model.hpp  load_texture.cpp  load_texture.hpp  pipeline.cpp  pipeline.hpp  shaderModule.cpp  shaderModule.hpp  swapchain.cpp  swapchain.hpp  triangle.cpp  util.hpp  utility.cpp  utility.hpp  window.hpp
